--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,11 @@ button {
     color: white; 
     border: none;
     width: 100%;
-    transition: 2s;
+    transition: 0.8s;
     margin-bottom: 100px;
 }
 button:hover {
-    background-color: #03330e;
+    background-color: #0b7524;
     cursor: pointer;
 }
 
@@ -36,22 +36,29 @@ ul {
 }
 
 li {
-    background-color: #f8f9fa;
+     background-color: rgba(59, 47, 8, 0.315);           /* #fcfaa5; */
     margin: 5px 0;
     padding: 10px; 
-    border: 1px solid #ccc;
+    border: 2px solid #fcfaa5;                                /* #ccc; */
+    color: rgb(59, 47, 8);
+    font-size: bold;
+    text-align: center;
 }
 
 h1 {
     text-align: center;
     color: white;
     background-color: #0b7524;
-    padding: 10px;
+    padding: 15px;
     border-radius: 10px;
     font-size: bold;
 }
 
 h2 {
     text-align: center;
-    color: black;
+    color: #fcfaa5;
+    background-color:  rgb(59, 47, 8);
+    padding: 10px;
+    border-radius: 10px;
 }
+
