--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,9 @@ li {
      background-color: rgba(59, 47, 8, 0.315);           /* #fcfaa5; */
     margin: 5px 0;
     padding: 10px; 
-    border: 2px solid #fcfaa5;                                /* #ccc; */
+    border: 2px solid black;                              /* fcfaa5 */  /* #ccc; */
     color: rgb(59, 47, 8);
-    font-size: bold;
+    font-weight: bold;
     text-align: center;
 }
 
@@ -49,16 +49,17 @@ h1 {
     text-align: center;
     color: white;
     background-color: #0b7524;
-    padding: 15px;
+    padding: 12px;
     border-radius: 10px;
-    font-size: bold;
+    font-size: 30px;
 }
 
 h2 {
     text-align: center;
-    color: #fcfaa5;
+    color: white;        /* #fcfaa5; */
     background-color:  rgb(59, 47, 8);
-    padding: 10px;
+    padding: 12px;
     border-radius: 10px;
+    font-size: 30px;
 }
 
