--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
     font-family:Arial, sans-serif;
     background-color: floralwhite;
     padding: 20px;
+    /* background-image: url(img/background2.jpg); */
+    background-size: 100%;
+    
+
 }
 
 .container {
